--- a/package.json
+++ b/package.json
@@ -2,10 +2,9 @@
   "name": "firebase-validate-key",
   "version": "1.0.0",
   "description": "Validate that a string is a valid Firebase key",
-  "main": "./src",
+  "main": "index.js",
   "scripts": {
-    "test": "babel-tape-runner test/*.js",
-    "build": "babel ./src -d ./lib --optional runtime"
+    "test": "standard && tape test.js"
   },
   "repository": {
     "type": "git",
@@ -23,11 +22,10 @@
   },
   "homepage": "https://github.com/bendrucker/firebase-validate-key#readme",
   "dependencies": {
-    "babel-runtime": "^5.0.0"
+    "escape-string-regexp": "~1.0.3"
   },
   "devDependencies": {
-    "babel": "~5.1.13",
-    "babel-tape-runner": "~1.1.0",
+    "standard": "~4.3.1",
     "tape": "~4.0.0"
   }
 }
